<!--<resources>-->
<!--    <string name="app_name">Free Market</string>-->
<!--    <string name="home">home</string>-->
<!--    <string name="categories"> categories</string>-->
<!--    <string name="video">video</string>-->
<!--    <string name="search">search</string>-->
<!--    <string name="my_market"> my_market</string>-->
<!--    <string name="subject">subject</string>-->
<!--    <string name="games"> games</string>-->
<!--    <string name="programs"> programs</string>-->
<!--</resources>-->


<resources>
    <string name="app_name">Free Market</string>
    <string name="home">خانه</string>
    <string name="categories">دسته ها</string>
    <string name="video">ویدیو</string>
    <string name="search">جستجو</string>
    <string name="my_market">بازار من</string>
    <string name="subject">عنوان</string>
    <string name="games">بازی ها</string>
    <string name="programs">برنامه ها</string>
    <string name="app_name_">نام اپلیکیشن</string>
    <string name="cost">هزینه</string>
    <string name="no_connection">لطفا از اتصال دستگاه خود به اینترنت مطمعن شوید.</string>
    <string name="try_again">تلاش دوباره</string>
    <string name="user_account">حساب کاربری</string>
    <string name="Login">ورود</string>
    <string name="updates">به روز رسانی ها</string>
    <string name="installed">نصب شده ها</string>
    <string name="security_of_market">سپر امنیت بازار</string>
    <string name="recent_download">دانلودهای اخیر</string>
    <string name="child_market">بازار کودک</string>
    <string name="downloaded">دانلود شده ها</string>
    <string name="played_history">تاریخچه پخش</string>
    <string name="question">question</string>
    <string name="setting">setting</string>
</resources>
