<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_myMarket"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/my_market" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_view_quilt_black_24dp"
        android:title="@string/categories" />
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_play_circle_filled_black_24dp"
        android:title="@string/video" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

</menu>
