<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_myMarket"
        android:name="pro.vteam.freemarket.ui.myMarket.MyMarketFragment"
        android:label="@string/my_market"
        tools:layout="@layout/fragment_my_market" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="pro.vteam.freemarket.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_categories"
        android:name="pro.vteam.freemarket.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="pro.vteam.freemarket.ui.video.VideoFragment"
        android:label="@string/video"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="pro.vteam.freemarket.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />


</navigation>
