<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_download_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />
        <TextView
            android:id="@+id/txt_subject1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@id/img_icon1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_more1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout1"
        style="@style/Divider"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_subject2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installed"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@id/img_icon2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_more2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout2"
        style="@style/Divider"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_security_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_subject3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_of_market"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@id/img_icon3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_more3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout3"
        style="@style/Divider"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_restore_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_subject4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_download"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@id/img_icon4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_margin"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_more4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout4"
        style="@style/Divider"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_child_care_black_24dp"
            android:tint="	@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_subject5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_market"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@id/img_icon5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_margin"/>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/constraint_layout5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        app:layout_constraintBottom_toBottomOf="@id/constraint_layout5"
        style="@style/Divider"/>

</androidx.appcompat.widget.LinearLayoutCompat>